Keep USB labels compatible with Android 8